# unitree_rl_mjlab

./: .gitignore  setup.py
deploy/include/FSM/: BaseState.h  CtrlFSM.h  FSMState.h
deploy/robots/g1/: CMakeLists.txt  main.cpp
deploy/robots/g1/config/: config.yaml
deploy/robots/g1/config/policy/g1_custom/v0/exported/: policy.onnx  policy_2.onnx  policy_old.onnx
deploy/robots/g1/config/policy/g1_custom/v0/params/: deploy.yaml
deploy/robots/g1/config/policy/g1_reference/v0/exported/: policy.onnx  policy_working.onnx
deploy/robots/g1/config/policy/g1_soft/v0/exported/: policy.onnx
deploy/robots/g1/config/policy/g1_soft/v0/exported/g1_soft_04_04_18-13/: note.txt  policy.onnx
deploy/robots/g1/config/policy/g1_soft/v0/exported/g1_soft_05_04_08-35/: note.txt  policy.onnx
deploy/robots/g1/config/policy/g1_soft/v0/exported/g1_soft_v2_05_04_14-13-59/: note.txt  policy.onnx
deploy/robots/g1/config/policy/g1_soft/v0/exported/g1_soft_v2_07_04_22-38-23/: note.txt  policy.onnx
deploy/robots/g1/config/policy/g1_soft/v0/params/: deploy.yaml
deploy/robots/g1/src/: State_RLBase.cpp
simulate/: config.yaml
simulate/src/: main.cc
